Fixed auth components on mobile devices

--- a/src/components/ForgotPassword/ForgotPassword.css
+++ b/src/components/ForgotPassword/ForgotPassword.css
@@ -27,7 +27,7 @@
 @media (max-width: 650px) {
   .forgot-pw-container {
     width: 90%;
-    margin-top: 16%;
+    margin-top: 20%;
   }
 
   .forgot-pw-title {
