--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -35,6 +35,7 @@
 
 @media (max-width: 650px) {
   .login-container {
+    margin-top: 20%;
     width: 90%;
   }
 
