--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -69,6 +69,7 @@
 
 @media (max-width: 650px) {
   .register-container {
+    margin-top: 20%;
     width: 90%;
   }
 
