--- a/src/utils/TextField/TextField.css
+++ b/src/utils/TextField/TextField.css
@@ -6,6 +6,7 @@
   border-style: none;
   box-shadow: 0 1px 0 0 gray;
   transition: box-shadow 0.1s ease-in;
+  font-size: 16px;
 }
 
 .textField:focus {
